fixed the misalignment of .right

--- a/static/styles/forms.css
+++ b/static/styles/forms.css
@@ -5,10 +5,7 @@ body {
 
 main {
   background-color: rgba(255, 255, 255, 0.7);
-  padding-top: 0.4em;
-  padding-left: 0.2em;
-  padding-right: 0.2em;
-  padding-bottom: 0.4em;
+  padding: 0.2em;
 }
 
 h1 {
@@ -35,6 +32,7 @@ label {
 
 .right {
   float: right;
+  margin-top: 3px;
 }
 
 .p {
